--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Nikki Efstathiou | Portfolio</title>
-    <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../CSS/reset.css">
+    <link rel="stylesheet" href="../CSS/style.css">
   </head>
   <body>
     <!-- hero unit -->
@@ -67,11 +67,11 @@
   </div>
     <div class="button">
     <a href="project1.html">View case study
-      <img class="buttonhighlight" src="../images/buttonhighlight.svg">
     <div class="buttonarrow">
       <img src="../images/sidearrow.svg" alt="buttonarrow">
     </a>
   </div>
+    <img class="buttonhighlight" src="../images/buttonhighlight.svg">
   </div>
 </div>
 </section>
@@ -146,7 +146,7 @@
     <img src="../images/fillerphoto.svg" alt="Mike Dekker">
     <p class="testimonialname">Mike Dekker</p>
   </div>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
+  <p class="review">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
   </section>
 
 
@@ -156,16 +156,19 @@
   <h1 class="footertext">Let's work together!</h1>
   <div class="contactbutton">
   <a href="contact.html">get in touch
+    <div class="buttonarrow">
     <img src="../images/sidearrow.svg" alt="buttonarrow">
   </a>
 </div>
 </div>
 <div class="contacticons">
+  <div class="footericons">
       <ul>
         <li> <a href="https://github.com/nikkefstath"><img src="../images/github.svg" alt="github"></a></li>
         <li> <a href="mailto:naefstathiou@gmail.com"><img src="../images/mail.svg" alt="email"></a></li>
         <li> <a href="www.linkedin.com/in/nikkiefstathiou"><img src="../images/linkedin.svg" alt=linkedin></a></li>
       </ul>
+    </div>
     </div>
 </footer>
 </div>
